Add dynamic modal dialogs for user feedback
Introduces dynamic modal dialogs for login, signup, forgot/reset password, and settings pages to provide user feedback on actions such as success or failure. Updates backend routes to support forgot password functionality. Refactors frontend JS to use modals instead of alerts, improves input handling, and updates CSS for modal styling. Removes dark/contrast mode CSS from several pages.

--- a/frontend/pages/forgot+resetpasswordpg.html
+++ b/frontend/pages/forgot+resetpasswordpg.html
@@ -1,58 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Really Good Password Manager Forgot Password</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../css/forgot-reset-password-style.css"
-    />
-    <link rel="icon" type="image/x-icon" href="../assets/site-icon.png" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Really Good Password Manager Forgot Password</title>
+  <link rel="stylesheet" type="text/css" href="../css/forgot-reset-password-style.css" />
+  <link rel="icon" type="image/x-icon" href="../assets/site-icon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <nav>
-      <a href="loginpg.html" class="navbar-items">
-        <img src="../assets/log-out-icon.svg" alt="Back" />
-      </a>
-    </nav>
-    <div class="container">
-      <div class="split-left">
-        <img src="../assets/site-icon.png" alt="pmicon" class="logo" />
-        <h1>Really Good Password Manager</h1>
-      </div>
-      <div class="split-right">
-        <h2 id="dymanic-heading">Forgot Password</h2>
-        <div class="forgot-password-container">
-          <input
-            type="text"
-            id="email-input"
-            placeholder="Email:"
-            autocomplete="off"
-          />
-          <button onclick="submitForgotPassword()" id="forgot-password-btn">
-            Forgot Password
-          </button>
-          <input
-            type="text"
-            id="new-password-input"
-            placeholder="New Password:"
-            autocomplete="off"
-          />
-          <input
-            type="text"
-            id="confirm-password-input"
-            placeholder="Confirm Password:"
-            autocomplete="off"
-          />
-          <button onclick="submitNewPassword()" id="new-password-btn">
-            Submit New Password
-          </button>
-        </div>
+</head>
+
+<body>
+  <nav>
+    <a href="loginpg.html" class="navbar-items">
+      <img src="../assets/log-out-icon.svg" alt="Back" />
+    </a>
+  </nav>
+  <div class="container">
+    <div class="split-left">
+      <img src="../assets/site-icon.png" alt="pmicon" class="logo" />
+      <h1>Really Good Password Manager</h1>
+    </div>
+    <div class="split-right">
+      <h2 id="dymanic-heading">Forgot Password</h2>
+      <div class="forgot-password-container">
+        <input type="email" id="email-input" placeholder="Email:" autocomplete="off" />
+        <button id="forgot-password-btn">
+          Forgot Password
+        </button>
+        <input type="password" id="new-password-input" placeholder="New Password:" autocomplete="off" style="display: none"/>
+        <input type="password" id="confirm-password-input" placeholder="Confirm Password:" autocomplete="off" style = "display: none" />
+        <button id="new-password-btn" style = "display: none">
+          Submit New Password
+        </button>
       </div>
     </div>
-  </body>
-  <script src="../js/forgot+resetpassword.js"></script>
+  </div>
+
+  <!--Dynamic Forgot Password Modal-->
+  <div class="dynamic-forgot-password-modal-container" id="dynamic-forgot-password-modal-container" style="display: none">
+    <div class="dynamic-forgot-password-modal-content" id="dynamic-forgot-password-modal-content">
+      <button class="close" id="dynamic-forgot-password-modal-close-button">&times;</button>
+      <h2 id="dynamic-forgot-password-modal-title">Lorem Ipsum</h2>
+      <p id="dynamic-forgot-password-modal-message">Lorem Ipsum</p>
+      <button type="submit" class="ok-button" id="ok-button">
+        <span class="submit">Ok</span>
+      </button>
+    </div>
+  </div>
+
+</body>
+<script src="../js/forgot+resetpassword.js"></script>
+
 </html>
