--- a/frontend/pages/settingspg.html
+++ b/frontend/pages/settingspg.html
@@ -73,8 +73,8 @@
           </div>
           <div class="form-input">
             <label for="new-password-input">New Password:</label>
-            <input type="password" class="new-password-input" id="new-password-input" placeholder="Enter new password..."
-              required>
+            <input type="password" class="new-password-input" id="new-password-input"
+              placeholder="Enter new password..." required>
           </div>
           <button type="submit" class="change-password-button" id="change-password-button">
             <span class="submit">Change Password</span>
@@ -111,6 +111,18 @@
           </button>
         </form>
         </form>
+      </div>
+    </div>
+
+    <!--Dynamic Modal-->
+    <div class="dynamic-settings-modal-container" id="dynamic-settings-modal-container" style="display: none">
+      <div class="dynamic-settings-modal-content" id="dynamic-settings-modal-content">
+        <button class="close" id="dynamic-settings-modal-close-button">&times;</button>
+        <h2 id="dynamic-settings-modal-title">Lorem Ipsum</h2>
+        <p id="dynamic-settings-modal-message">Lorem Ipsum</p>
+        <button type="submit" class="ok-button" id="ok-button">
+          <span class="submit">Ok</span>
+        </button>
       </div>
     </div>
 
