Added mainpg dynamic modal, SQL userId queries, added /check route, added session save.

--- a/frontend/pages/mainpg.html
+++ b/frontend/pages/mainpg.html
@@ -50,9 +50,6 @@
           <button class="notification-bell" id="notification-bell" alt="notification-bell-icon">
             <img src="../assets/bell-icon.svg" class = "icon-shadow" alt="notifications" />
           </button>
-          <button class="account-icon" id="account-icon" alt="account-icon">
-            <img src="../assets/user-icon.svg" class = "icon-shadow" alt="profile-icon" />
-          </button>
           <button class="settings-icon" id="settings-icon" alt="settings-icon">
             <a href="settingspg.html">
               <img src="../assets/cog-icon.svg" class = "icon-shadow" alt="settings-icon" />
@@ -194,6 +191,18 @@
       <button class="close" id="notifications-close-button">&times;</button>
       <h2>Notifications</h2>
       <div class="notifications-section" id="notifications-section"></div>
+    </div>
+  </div>
+
+  <!--Dynamic Modal-->
+  <div class="dynamic-mainpg-modal-container" id="dynamic-mainpg-modal-container" style="display: none">
+    <div class="dynamic-mainpg-modal-content" id="dynamic-mainpg-modal-content">
+      <button class="close" id="dynamic-mainpg-modal-close-button">&times;</button>
+      <h2 id="dynamic-mainpg-modal-title">Lorem Ipsum</h2>
+      <p id="dynamic-mainpg-modal-message">Lorem Ipsum</p>
+      <button type="submit" class="ok-button" id="ok-button">
+        <span class="submit">Ok</span>
+      </button>
     </div>
   </div>
 
