--- a/frontend/pages/loginpg.html
+++ b/frontend/pages/loginpg.html
@@ -20,7 +20,7 @@
     <div class="split-right">
       <h2>Login</h2>
       <div class="login-container">
-        <input type="text" id="email-input" placeholder="Email:" autocomplete="off" />
+        <input type="email" id="email-input" placeholder="Email:" autocomplete="off" />
         <input type="password" id="password-input" placeholder="Password:" autocomplete="off" />
         <a href="forgot+resetpasswordpg.html" id="forgot-password-link">Forgot Password?</a>
         <button id="login-button">Login</button>
@@ -32,7 +32,6 @@
   <!--Dynamic Log In Modal-->
   <div class="dynamic-login-modal-container" id="dynamic-login-modal-container" style="display: none">
     <div class="dynamic-login-modal-content" id="dynamic-login-modal-content">
-      <button class="close" id="dynamic-login-modal-close-button">&times;</button>
       <h2 id="dynamic-login-modal-title">Lorem Ipsum</h2>
       <p id="dynamic-login-modal-message">Lorem Ipsum</p>
       <button type="submit" class="ok-button" id="ok-button">
