--- a/frontend/pages/signuppg.html
+++ b/frontend/pages/signuppg.html
@@ -19,7 +19,7 @@
     <div class="split-right">
       <h2>Sign Up</h2>
       <div class="sign-up-container">
-        <input type="text" id="email-input" placeholder="Email:" autocomplete="off" />
+        <input type="email" id="email-input" placeholder="Email:" autocomplete="off" />
         <input type="text" id="confirm-email-input" placeholder="Confirm Email:" autocomplete="off" />
         <input type="password" id="password-input" placeholder="Password:" autocomplete="off" />
         <button id = "sign-up-button">Sign Up</button>
@@ -31,7 +31,6 @@
   <!--Dynamic Sign Up Modal-->
   <div class="dynamic-signup-modal-container" id="dynamic-signup-modal-container" style="display: none">
     <div class="dynamic-signup-modal-content" id="dynamic-signup-modal-content">
-      <button class="close" id="dynamic-signup-modal-close-button">&times;</button>
       <h2 id="dynamic-signup-modal-title">Lorem Ipsum</h2>
       <p id="dynamic-signup-modal-message">Lorem Ipsum</p>
       <button type="submit" class="ok-button" id="ok-button">
