Remove debug logs and improve frontend validation
Eliminated console.log statements and debug output from backend and frontend code for cleaner production behavior. Enhanced email validation in login, signup, add/edit password forms, and improved UI responsiveness and accessibility. Updated CSS for better desktop and mobile layouts, and added comments for maintainability.

--- a/frontend/pages/mainpg.html
+++ b/frontend/pages/mainpg.html
@@ -196,7 +196,8 @@
       <h2 id="add-to-vault-modal-title">Add Generated Password To Vault</h2>
       <form class="add-to-vault-inputs">
         <div class="form-input">
-          <label for="add-to-vault-service-input">Enter a vault service for the generated password to be assigned to...</label>
+          <label for="add-to-vault-service-input">Enter a vault service for the generated password to be assigned
+            to...</label>
           <input type="text" class="add-to-vault-service-input" id="add-to-vault-service-input"
             placeholder="Service for generated password..." required />
         </div>
@@ -269,6 +270,11 @@
       <img src="../assets/permenant-delete-icon.svg" class="permenant-delete-icon" />
     </div>
   </div>
+
+  <div class="footer">
+    <p><a href="https://github.com/CarlBaines" target="_blank">2025 | Created by Carl Baines</a></p>
+  </div>
+
   <script src="../js/mainpg.js"></script>
 </body>
 
