--- a/frontend/pages/settingspg.html
+++ b/frontend/pages/settingspg.html
@@ -126,7 +126,7 @@
     </div>
 
     <div class="footer">
-      <p>© 2025 | Created by Luke Eastwood and Carl Baines</p>
+      <p><a href = "https://github.com/CarlBaines" target = "_blank">2025 | Created by Carl Baines</a></p>
     </div>
   </div>
 </body>
